feat: add header and navbar

--- a/tugas/pelatihan-vcs-2023/urvan_gibran/index.html
+++ b/tugas/pelatihan-vcs-2023/urvan_gibran/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <link rel="shortcut icon" href="image/favicon/favicon-vcs.jpg" type="image/jpg">
@@ -7,9 +8,33 @@
   <link rel="stylesheet" href="styles.css">
   <title>Tugas Web VCS</title>
 </head>
+
 <body>
   <div class="container">
-    <h1>Initial</h1>
+    <header>
+      <nav>
+        <div class="left-nav">
+          <div class="search">
+            <div class="icon"></div>
+          </div>
+          <p>Catalog</p>
+          <p>Collection points</p>
+          <p class="mr-15">Who we are</p>
+        </div>
+        <div class="center-nav">
+          <h3>FREECYCLE</h3>
+        </div>
+        <div class="right-nav">
+          <p>Delivery</p>
+          <p>Orders</p>
+          <p>Balance <span>21 points</span></p>
+          <img class="pic-nav profile" src="image/hero/pic-nav.jpeg" alt="profile" />
+          <img class="pic-nav cart" src="image/hero/cart.png" alt="cart" />
+        </div>
+      </nav>
+      <hr />
+    </header>
   </div>
 </body>
+
 </html>
