feat: solve tugas rpl

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="content">
         
       <h2>Hello,<br>It's Me Abimanyu</h2>
-      <p>I'm A Junior Web Developer. I Will Make Your Project Beautiful And Attractive,<br>You Can Find Me On Instagram @abimanyudans.</p>
+      <p>I'm A Junior Web Developer. I Will Make Your Project Beautiful And Attractive,<br>You Can Find Me On Instagram @abimanyudans</p>
     </div>
     
     <div class="link">
