--- a/tugas/pelatihan-vcs-2023/Danny/index.html
+++ b/tugas/pelatihan-vcs-2023/Danny/index.html
@@ -98,11 +98,11 @@
 
       <div class="px-6 py-12 text-center md:px-12 lg:py-24 lg:text-left">
         <div
-          class="w-100 mx-auto text-neutral-800 sm:max-w-2xl md:max-w-3xl lg:max-w-5xl xl:max-w-7xl">
+          class="w-100 mx-auto text-red-600 sm:max-w-2xl md:max-w-3xl lg:max-w-5xl xl:max-w-7xl">
           <div class="grid items-center gap-12 lg:grid-cols-2">
             <div class="mt-12 lg:mt-0" style="z-index: 10">
               <h1
-                class="mt-0 mb-12 text-5xl font-bold tracking-tight md:text-6xl xl:text-7xl text-[hsl(218,81%,95%)]">
+                class="mt-0 mb-12 text-5xl font-bold tracking-tight md:text-6xl xl:text-7xl text-[hsl(0, 100%, 50%)]">
                 Labolatorium <br /><span class="text-[hsl(218,81%,75%)]"
                   >Rekayasa Perangkat Lunak</span
                 >
