Changes: - fix: edit hover navbar - feat: add left main component

--- a/tugas/pelatihan-vcs-2023/urvan_gibran/index.html
+++ b/tugas/pelatihan-vcs-2023/urvan_gibran/index.html
@@ -5,7 +5,16 @@
   <meta charset="UTF-8">
   <link rel="shortcut icon" href="image/favicon/favicon-vcs.jpg" type="image/jpg">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Style -->
   <link rel="stylesheet" href="styles.css">
+  <!-- Font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;200;300;400;500;600;700&display=swap"
+    rel="stylesheet" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;700&display=swap" rel="stylesheet" />
   <title>Tugas Web VCS</title>
 </head>
 
@@ -34,6 +43,43 @@
       </nav>
       <hr />
     </header>
+
+    <main>
+      <div class="left-main">
+        <div class="left-top--main">
+          <img src="image/hero/logo.png" alt="logo" />
+        </div>
+        <div class="left-middle--main">
+          <h1>Free clothes for those who care of nature</h1>
+          <p>
+            Get <span>1 point for 1 kilo of plastic</span> which you bring to
+            our collection points. Then choose any clothes made of recycled
+            materials from our catalog
+          </p>
+          <div class="button-wrapper">
+            <div class="button-hover">
+              <div class="btn">
+                <h3>VIEW CATALOG</h3>
+              </div>
+            </div>
+            <div class="btn btn-shadow"></div>
+          </div>
+        </div>
+        <div class="left-bottom--main">
+          <a href="https://www.google.com/maps/place/Barunastra+ITS/@-7.2772883,112.7981242,15z/data=!4m2!3m1!1s0x0:0x556b6a201a6919b5?sa=X&ved=2ahUKEwiY0s_89rP_AhXyRmwGHZDXAA0Q_BJ6BAhMEAg"
+            target="_blank">
+            <div class="image">
+              <img src="image/hero/locate.png" alt="location" />
+            </div>
+          </a>
+          <div class="locate">
+            <p><span>The nearest plastic collection point</span></p>
+            <p>Teknik Informatika, ITS, Surabaya</p>
+          </div>
+        </div>
+      </div>
+    </main>
+
   </div>
 </body>
 
