feat: add center main 'image'

--- a/tugas/pelatihan-vcs-2023/urvan_gibran/index.html
+++ b/tugas/pelatihan-vcs-2023/urvan_gibran/index.html
@@ -78,6 +78,11 @@
           </div>
         </div>
       </div>
+
+      <div class="center-main">
+        <img src="image/hero/foto-model.png" alt="Foto Model" />
+      </div>
+
     </main>
 
   </div>
