fix: correct some ineffective code

--- a/tugas/pelatihan-vcs-2023/urvan_gibran/index.html
+++ b/tugas/pelatihan-vcs-2023/urvan_gibran/index.html
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-  <div class="container">
+  <section class="container">
     <header>
       <nav>
         <div class="left-nav">
@@ -36,7 +36,7 @@
           <p class="mr-15">Who we are</p>
         </div>
         <div class="center-nav">
-          <h3>FREECYCLE</h3>
+          <h3>Freecycle</h3>
         </div>
         <div class="right-nav">
           <p>Delivery</p>
@@ -50,6 +50,7 @@
     </header>
 
     <main>
+      
       <div class="left-main">
         <div class="left-top--main">
           <img src="image/hero/logo.png" alt="logo" />
@@ -64,7 +65,7 @@
           <div class="button-wrapper">
             <div class="button-hover">
               <div class="btn">
-                <h3>VIEW CATALOG</h3>
+                <h3>View Catalog</h3>
               </div>
             </div>
             <div class="btn btn-shadow"></div>
@@ -172,7 +173,7 @@
       </div>
 
     </main>
-  </div>
+  </section>
 
   <script src="script.js"></script>
 </body>
