feat: add Landing Page

--- a/tugas/pelatihan-vcs-2023/Ranto_Bastara_Hamonangan_Sitorus/index.html
+++ b/tugas/pelatihan-vcs-2023/Ranto_Bastara_Hamonangan_Sitorus/index.html
@@ -14,12 +14,33 @@
   </head>
   <body>
     <header>
-      <h1>Judul</h1>
+      <h1 id="Judul">Judul</h1>
       <nav>
         <a href="">bagian 1</a>
         <a href="">bagian 2</a>
         <a href="">bagian 3</a>
       </nav>
     </header>
+    <section id="landing">
+      <div>
+        <h2>Lorem, ipsum.</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident,
+          harum!
+        </p>
+      </div>
+      <div class="slider-wrapper">
+        <div class="slider">
+          <img id="slide-1" src="./assets/foto_landing1.jpeg" alt="" />
+          <img id="slide-1" src="./assets/foto_landing2.jpeg" alt="" />
+          <img id="slide-1" src="./assets/foto_landing3.jpeg" alt="" />
+        </div>
+        <div class="slider-nav">
+          <a href="#slide-1"></a>
+          <a href="#slide-1"></a>
+          <a href="#slide-1"></a>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
