feat: Add Member Page

--- a/tugas/pelatihan-vcs-2023/Ranto_Bastara_Hamonangan_Sitorus/index.html
+++ b/tugas/pelatihan-vcs-2023/Ranto_Bastara_Hamonangan_Sitorus/index.html
@@ -32,13 +32,25 @@
       <div class="slider-wrapper">
         <div class="slider">
           <img id="slide-1" src="./assets/foto_landing1.jpeg" alt="" />
-          <img id="slide-1" src="./assets/foto_landing2.jpeg" alt="" />
-          <img id="slide-1" src="./assets/foto_landing3.jpeg" alt="" />
+          <img id="slide-2" src="./assets/foto_landing2.jpeg" alt="" />
+          <img id="slide-3" src="./assets/foto_landing3.jpeg" alt="" />
         </div>
         <div class="slider-nav">
           <a href="#slide-1"></a>
-          <a href="#slide-1"></a>
-          <a href="#slide-1"></a>
+          <a href="#slide-2"></a>
+          <a href="#slide-3"></a>
+        </div>
+      </div>
+    </section>
+    <section id="member-page">
+      <div id="jikoshoukai">
+        <h2 id="fiony">
+          "Seperti simfoni yang menenangkan hati. Halo, aku Fiony"
+        </h2>
+      </div>
+      <div id="foto-member">
+        <div>
+          <img src="./assets/foto_member/fiony_alveria.jpg" alt="" />
         </div>
       </div>
     </section>
