fix: fixed landing page

--- a/tugas/pelatihan-vcs-2023/Revy/index.html
+++ b/tugas/pelatihan-vcs-2023/Revy/index.html
@@ -4,19 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landing Page</title>
+    <title>Minato Aqua</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@600&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Landing Page</h1>
-    <div id="ppp">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ac porttitor nisl, eu lobortis ante. Mauris hendrerit ornare ligula, eget vehicula libero auctor eget. Cras ultricies fringilla nulla. Integer volutpat blandit molestie. Morbi at libero ut orci placerat porta. Nullam leo nulla, volutpat ac elit eget, tincidunt cursus ipsum. Donec volutpat est eget nisi vehicula, laoreet ultrices nibh pharetra. Suspendisse sit amet malesuada justo, eu volutpat odio. Nulla rhoncus nisi eget ante sodales, in aliquet quam accumsan.</p>
-        <p>Pellentesque nec massa in nisi venenatis pretium eu ut elit. Donec vel varius mi. Nam sapien quam, porta et egestas a, tempus eget nulla. Mauris sit amet dignissim felis. Vivamus hendrerit volutpat lobortis. Fusce nec maximus metus. Praesent dapibus, libero et bibendum porttitor, est elit interdum sem, sit amet ultrices est felis ac enim.</p>
-        <p>Aenean libero libero, rhoncus eget pulvinar nec, aliquam vitae libero. Etiam quis nisl vel orci placerat eleifend. Mauris vitae eros ac risus efficitur ornare. Nullam posuere nibh vitae odio mollis rutrum. Quisque pretium egestas risus et laoreet. Nunc fringilla risus bibendum, auctor eros non, auctor ante. Mauris posuere est id augue blandit, ut consectetur dolor elementum.</p>
-        <p>Curabitur efficitur, mauris ac auctor feugiat, nunc erat porttitor lacus, vel pretium turpis augue sit amet mauris. Curabitur pulvinar lobortis tempus. Quisque faucibus sodales maximus. Nam ac velit magna. Morbi ut nibh at ligula tristique fermentum finibus eleifend odio. Mauris pharetra nibh at mauris finibus pretium. Aliquam eget velit turpis. Mauris egestas, justo ac pellentesque blandit, orci mauris egestas ligula, hendrerit commodo felis nunc id quam. Donec sed ultrices libero. Curabitur purus lacus, congue id commodo eu, ornare et nunc. Integer euismod turpis non quam viverra, eget lacinia ante rutrum. Curabitur eget risus mattis, laoreet est id, ultrices purus. Mauris malesuada nibh non elementum maximus. Cras mattis velit vitae massa fermentum pulvinar.</p>
-        <p>Aliquam iaculis malesuada lacus, a lobortis diam suscipit quis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Aenean velit tortor, facilisis id nisl sed, blandit maximus mauris. Sed at metus vel risus porttitor bibendum sit amet sit amet elit. Curabitur dictum sit amet arcu eget imperdiet. Nullam porta nisl finibus lorem molestie lobortis. Sed iaculis, turpis sit amet molestie efficitur, nulla lorem interdum lacus, vel suscipit dui est vel dolor. Donec tristique ultrices blandit. Ut interdum urna a cursus fringilla. In aliquam eros ut suscipit rutrum. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris pulvinar, lorem sit amet finibus pharetra, odio quam mattis mi, non tristique lacus orci sed tortor.</p>
+    <div class="container">
+        <div class="navbar">
+            <img src="images/pngaaa.com-4632011.png" class="logo">
+            <nav>
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Contact</a></li>
+                </ul>
+            </nav>
+            <img src="images/[CITYPNG.COM]Transparent HD White Menu Burger Icon - 4000x4000.png" class="menu-icon">
+        </div>
+
+        <div class="row">
+            <div class="col">
+                <h1>Minato Aqua</h1>
+                <p>"A-quality day to one and all! I'm Minato Aqua!" A marine maid-styled virtual maid. She is trying her very best, yet is still sometimes awkward and clumsy.</p>
+                <a href="https://virtualyoutuber.fandom.com/wiki/Minato_Aqua"><button type="button">Find Out More!</button></a>
+            </div>
+        </div>
     </div>
-    
 </body>
 </html>
