--- a/tugas/pelatihan-vcs-2023/haikal_athallarik/index.html
+++ b/tugas/pelatihan-vcs-2023/haikal_athallarik/index.html
@@ -1,55 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
 <title>Page Title</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="styles.css" />
+
+<script>
+    var gambarOri = 'FwPVSulacAAJSqK.jpg'; 
+    var gambarGif = 'kurukuru-kururing.gif';       
+    var jumCount = 0;
+
+    function ubahGambar() {
+      var gambar = document.getElementById('gambar');
+      var counter = document.getElementById('counter');
+
+      if (gambar.src.includes(gambarOri)) {
+        jumCount++;
+        counter.textContent = 'Spinning ' + jumCount;
+        
+        gambar.src = gambarGif;
+        setTimeout(function() {
+          gambar.src = gambarOri;
+        }, 500);
+      }
+    }
+  </script>
+
 </head>
 <body>
 
-<div class="header">
-  <h1>Web</h1>
-  <p>Yea its me
-</div>
-
-<div class="navbar">
-  <a href="google.com">Google</a>
-  <a href="#">Link</a>
-  <a href="#">Link</a>
-  <a href="#" class="right">Link</a>
-</div>
-
-<div class="row">
-  <div class="side">
-    <h2>About Me</h2>
-    <h5>Photo of me:</h5>
-    <div class="fakeimg" style="height:200px;">Image</div>
-    <p>Text about me</p>
-    <h3>More Text</h3>
-    <p>waaa</p>
-    <div class="fakeimg" style="height:60px;">Image</div><br>
-    <div class="fakeimg" style="height:60px;">Image</div><br>
-    <div class="fakeimg" style="height:60px;">Image</div>
+  <div class="navbar">
+    <a href="#">Home</a>
+    <a href="#">Help</a>
+    <a href="#">About Us</a>
+    <a href="#" class="right">III</a>
   </div>
-  <div class="main">
-    <h2>TITLE HEADING</h2>
-    <h5>Title description</h5>
-    <div class="fakeimg" style="height:200px;">Image</div>
-    <p>Some text..</p>
-    <p>Explanation</p>
-    <br>
-    <h2>TITLE HEADING</h2>
-    <h5>Title description</h5>
-    <div class="fakeimg" style="height:200px;">Image</div>
-    <p>Some text..</p>
-    <p>Explanation</p>
-  </div>
-</div>
 
-<div class="footer">
-  <h2>Footer</h2>
-</div>
+  <div class="header">
+    <h1>HERTA KURUKURU CLICKER</h1>
+  </div>
+
+  <button onclick="ubahGambar()">KuruKuru</button>
+  <br>
+  <span id="counter">KuruKuru 0</span>
+  <br>
+  <img id="gambar" src="FwPVSulacAAJSqK.jpg" alt="Gambar" width="500">
 
 </body>
 </html>
