Commit HTML Tugas VCS

--- a/tugas/pelatihan-vcs-2023/haikal_athallarik/index.html
+++ b/tugas/pelatihan-vcs-2023/haikal_athallarik/index.html
@@ -9,7 +9,7 @@
 
 <script>
     var gambarOri = 'FwPVSulacAAJSqK.jpg'; 
-    var gambarGif = 'kurukuru-kururing.gif';       
+    var gambarGif = 'krkr.gif';       
     var jumCount = 0;
 
     function ubahGambar() {
