--- a/tugas/pelatihan-vcs-2023/faiz-muhammad-kautsar/index.html
+++ b/tugas/pelatihan-vcs-2023/faiz-muhammad-kautsar/index.html
@@ -20,7 +20,8 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link rel="stylesheet" href="styles.css" />
 
-    <title>pod.cast</title>
+    <title>pod.cat</title>
+    <link rel="icon" type="image/x-icon" href="assets/icon.png" />
   </head>
   <body>
     <div id="top">
@@ -28,7 +29,7 @@
         <ul>
           <li>
             <img src="assets/icon.png" alt="" style="height: 8vw" /><a href="/"
-              ><strong>pod.cast</strong></a
+              ><strong>pod.cat</strong></a
             >
           </li>
         </ul>
@@ -102,7 +103,7 @@
               "Safety Third",
               "",
             ],
-            typeSpeed: 50,
+            typeSpeed: 30,
             backSpeed: 20,
             backDelay: 1000,
             showCursor: false,
