--- a/tugas/pelatihan-vcs-2023/haikal_athallarik/index.html
+++ b/tugas/pelatihan-vcs-2023/haikal_athallarik/index.html
@@ -21,6 +21,7 @@
             <div class="content">
                 <h1>I Need More Bullets</h1>
                 <p>Pls help he need bullets</p>
+                <a href="">Learn More</a>
             </div>
         </div>
     </div>
