finishing project(tapi gak finish)

--- a/tugas/pelatihan-vcs-2023/Ranto_Bastara_Hamonangan_Sitorus/index.html
+++ b/tugas/pelatihan-vcs-2023/Ranto_Bastara_Hamonangan_Sitorus/index.html
@@ -14,10 +14,10 @@
   </head>
   <body>
     <header>
-      <h1 id="Judul">Judul</h1>
+      <h1 id="Judul">JKT48</h1>
       <nav>
-        <a href="">bagian 1</a>
-        <a href="">bagian 2</a>
+        <a href="#landing">About</a>
+        <a href="#member-page">Member</a>
         <a href="">bagian 3</a>
       </nav>
     </header>
