fix: contact button cannot be clicked

--- a/tugas/pelatihan-vcs-2023/Mohamad Valdi Ananda Tauhid/index.html
+++ b/tugas/pelatihan-vcs-2023/Mohamad Valdi Ananda Tauhid/index.html
@@ -19,7 +19,7 @@
     <div class="title" style="background-color: hsla(239, 63%, 54%, 0.5); height: 800px;">
       <h1 class="title">TOTALLY LEGIT</h1>
       <h2>TECH SUPPORT</h2>
-      <button>Contact Us</button>
+      <button><a href="">Contact Us</a></button>
     </div>
   </div>
 </body>
