feat: solve tugas rpl

--- a/tugas/pelatihan-vcs-2023/reynard/index.html
+++ b/tugas/pelatihan-vcs-2023/reynard/index.html
@@ -90,7 +90,7 @@
             <button
               type="button"
               class="inline-block rounded bg-primary px-6 pt-2.5 pb-2 text-xs font-medium uppercase leading-normal text-white shadow-[0_4px_9px_-4px_#3b71ca] transition duration-150 ease-in-out hover:bg-primary-600 hover:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.3),0_4px_18px_0_rgba(59,113,202,0.2)] focus:bg-primary-600 focus:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.3),0_4px_18px_0_rgba(59,113,202,0.2)] focus:outline-none focus:ring-0 active:bg-primary-700 active:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.3),0_4px_18px_0_rgba(59,113,202,0.2)] dark:shadow-[0_4px_9px_-4px_rgba(59,113,202,0.5)] dark:hover:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.2),0_4px_18px_0_rgba(59,113,202,0.1)] dark:focus:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.2),0_4px_18px_0_rgba(59,113,202,0.1)] dark:active:shadow-[0_8px_9px_-4px_rgba(59,113,202,0.2),0_4px_18px_0_rgba(59,113,202,0.1)]">
-              Sign up for free
+              Sign up for Rp0.00
             </button>
           </div>
         </div>
@@ -104,11 +104,11 @@
               <h1
                 class="mt-0 mb-12 text-5xl font-bold tracking-tight md:text-6xl xl:text-7xl text-[hsl(218,81%,95%)]">
                 Labolatorium <br /><span class="text-[hsl(218,81%,75%)]"
-                  >Rekayasa Perangkat Lunak</span
+                  >Rekayasa Perangkat Lunak (RPL)</span
                 >
               </h1>
               <p class="opacity-70 text-[hsl(218,81%,85%)]">
-                Laboratorium Rekayasa Perangkat Lunak di ITS adalah fasilitas
+                Laboratorium Rekayasa Perangkat Lunak (RPL) di ITS adalah fasilitas
                 pendidikan dan penelitian yang fokus pada pengembangan perangkat
                 lunak. Di sini, mahasiswa dan peneliti mempelajari desain,
                 pengembangan, pengujian, dan implementasi perangkat lunak serta
