change text color

--- a/tugas/pelatihan-vcs-2023/ferza/index.html
+++ b/tugas/pelatihan-vcs-2023/ferza/index.html
@@ -102,12 +102,12 @@
           <div class="grid items-center gap-12 lg:grid-cols-2">
             <div class="mt-12 lg:mt-0" style="z-index: 10">
               <h1
-                class="mt-0 mb-12 text-5xl font-bold tracking-tight md:text-6xl xl:text-7xl text-[hsl(218,81%,95%)]">
-                Labolatorium <br /><span class="text-[hsl(218,81%,75%)]"
+                class="mt-0 mb-12 text-5xl font-bold tracking-tight md:text-6xl xl:text-7xl text-blue-400">
+                Labolatorium <br /><span class="text-blue-500"
                   >Rekayasa Perangkat Lunak</span
                 >
               </h1>
-              <p class="opacity-70 text-[hsl(218,81%,85%)]">
+              <p class="opacity-70 text-red-500">
                 Laboratorium Rekayasa Perangkat Lunak di ITS adalah fasilitas
                 pendidikan dan penelitian yang fokus pada pengembangan perangkat
                 lunak. Di sini, mahasiswa dan peneliti mempelajari desain,
