--- a/tugas/pelatihan-vcs-2023/karina_rahmawati/index.html
+++ b/tugas/pelatihan-vcs-2023/karina_rahmawati/index.html
@@ -103,7 +103,7 @@
             <div class="mt-12 lg:mt-0" style="z-index: 10">
               <h1
                 class="mt-0 mb-12 text-5xl font-bold tracking-tight md:text-6xl xl:text-7xl text-[hsl(218,70%,60%)]">
-                Labolatorium <br /><span class="text-[hsl(218,81%,75%)]"
+                Laboratorium <br /><span class="text-[hsl(218,81%,75%)]"
                   >Rekayasa Perangkat Lunak</span
                 >
               </h1>
